core works, applications -- not sure